--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 <body>
 
 <header>
-    <div style="font-weight: bold;">OS SALES ENGINE</div>
+    <div style="font-weight: bold;">OpenShift Cluster Builder</div>
     <div style="display: flex; gap: 10px; align-items: center;">
         <button class="btn btn-primary" id="add-cluster-btn" style="background: #333;">+ Add Cluster</button>
         <button id="share-btn" class="btn" style="background: #333; color: white;">Share Link</button>
